[gd_scene load_steps=8 format=2]

[ext_resource path="res://minigames/falling_decimals/Main.gd" type="Script" id=1]
[ext_resource path="res://minigames/falling_decimals/assets/House In a Forest Loop.ogg" type="AudioStream" id=2]
[ext_resource path="res://minigames/falling_decimals/assets/gameover.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/OpenSans.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0666667, 0.431373, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ScoreBox" type="ColorRect" parent="."]
margin_left = 1800.0
margin_top = 100.0
margin_right = 1870.0
margin_bottom = 170.0
color = Color( 0.380392, 0.552941, 0.415686, 1 )

[node name="ScoreLabel" type="Label" parent="ScoreBox"]
margin_left = 22.0
margin_top = 5.0
margin_right = 22.0
margin_bottom = 19.0
align = 1
valign = 1

[node name="ScoreBorder" type="ReferenceRect" parent="."]
margin_left = 1800.0
margin_top = 100.0
margin_right = 1840.0
margin_bottom = 140.0
border_color = Color( 0, 0, 0, 1 )
border_width = 5.0
editor_only = false

[node name="RoundsBox" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.909804, 0.270588, 0.223529, 1 )

[node name="RoundsLabel" type="Label" parent="RoundsBox"]
margin_left = 22.0
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0

[node name="RoundsBorder" type="ReferenceRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 0, 0, 0, 1 )
border_width = 5.0
editor_only = false

[node name="EndBox" type="ColorRect" parent="."]
margin_left = 650.0
margin_top = 216.0
margin_right = 1250.0
margin_bottom = 346.0
color = Color( 0.172549, 0.172549, 0.172549, 1 )

[node name="OverLabel" type="Label" parent="EndBox"]
margin_left = 23.0
margin_top = -2.0
margin_right = 587.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="NumberTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="RestartButton" type="Button" parent="."]
margin_left = 651.0
margin_top = 566.0
margin_right = 1251.0
margin_bottom = 696.0
custom_styles/normal = SubResource( 2 )

[node name="RestartLabel" type="Label" parent="RestartButton"]
margin_left = 111.0
margin_top = -5.0
margin_right = 519.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
text = "RESTART"

[node name="ScoreBoard" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 200.0
margin_right = 80.0
margin_bottom = 300.0
color = Color( 0.113725, 0.34902, 0.494118, 1 )

[node name="Line1" type="Label" parent="ScoreBoard"]
margin_left = 10.0
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "High"

[node name="Line2" type="Label" parent="ScoreBoard"]
margin_left = 10.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 34.0
text = "score"

[node name="HighScore" type="Label" parent="ScoreBoard"]
margin_left = 20.0
margin_top = 40.0
margin_right = 36.0
margin_bottom = 54.0
